--- a/agent-python/client.ipynb
+++ b/agent-python/client.ipynb
@@ -16,37 +16,66 @@
    "outputs": [],
    "source": [
     "url = 'http://localhost:5000/agent'\n",
-    "payload = {'prompt': 'i need to buy new shoes for my son, add it to the tasks list'}"
+    "payload = {'prompt': 'i need to buy new shoes for my son, add it to the tasks list'}\n",
+    "response = requests.post(url, json=payload)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I have added the task to buy new shoes for your son to the task list. Here are the details:\n",
+      "\n",
+      "- **Title:** Buy new shoes for son\n",
+      "- **Description:** Purchase a new pair of shoes for my son.\n",
+      "- **Task Type:** Shopping\n",
+      "- **Start Date:** October 10, 2023\n",
+      "- **End Date:** October 15, 2023\n",
+      "- **Status:** Pending\n"
+     ]
+    }
+   ],
    "source": [
-    "response = requests.post(url, json=payload)"
+    "if response.status_code == 200:\n",
+    "    answer = response.json().get('response', 'No response found')\n",
+    "    print(answer)\n",
+    "else:\n",
+    "    print(f\"Error: {response.status_code}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'http://localhost:5000/agent'\n",
+    "payload = {'prompt': 'what are the tasks i have?'}\n",
+    "response = requests.post(url, json=payload)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I've added the task to buy new shoes for your son. Here are the details:\n",
+      "You have the following task:\n",
       "\n",
       "- **Title:** Buy new shoes for son\n",
-      "- **Description:** Purchase a pair of shoes for my son.\n",
+      "- **Description:** Purchase a new pair of shoes for my son.\n",
       "- **Task Type:** Shopping\n",
-      "- **Start Date:** October 5, 2023\n",
-      "- **End Date:** October 10, 2023\n",
-      "- **Status:** Pending\n",
-      "\n",
-      "If you need anything else, let me know!\n"
+      "- **Start Date:** October 10, 2023\n",
+      "- **End Date:** October 15, 2023\n",
+      "- **Status:** Pending\n"
      ]
     }
    ],
