--- a/agent-python/agent.ipynb
+++ b/agent-python/agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,19 +16,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[StructuredTool(name='get_tasks', description='Retrieves a list of tasks, optionally filtered by provided criteria.\\n\\nArgs:\\n    filters (Optional[Dict]): A dictionary of filter criteria where keys are task attributes.\\n\\nReturns:\\n    List[Dict]: A list of tasks matching the filters, or all tasks if no filters are provided.', args_schema=<class 'langchain_core.utils.pydantic.get_tasks'>, func=<function get_tasks at 0x000001BE1B0E3C40>),\n",
-       " StructuredTool(name='add_task', description='Adds a new task to the task list.\\n\\nArgs:\\n    title (str): The title of the task.\\n    description (str): A detailed description of the task.\\n    task_type (str): The type/category of the task.\\n    start_date (str): The start date of the task.\\n    end_date (str): The end date of the task.\\n    status (str): The current status of the task (e.g., pending, completed).\\n\\nReturns:\\n    Dict: The newly created task object with a unique ID.', args_schema=<class 'langchain_core.utils.pydantic.add_task'>, func=<function add_task at 0x000001BE1B0E3CE0>),\n",
-       " StructuredTool(name='update_task', description='Updates an existing task by its unique identifier.\\n\\nArgs:\\n    task_id (str): The unique identifier of the task to be updated.\\n    updates (Dict): A dictionary containing fields to update and their new values.\\n\\nReturns:\\n    Optional[Dict]: The updated task object if found, otherwise None.', args_schema=<class 'langchain_core.utils.pydantic.update_task'>, func=<function update_task at 0x000001BE1B0E3F60>),\n",
-       " StructuredTool(name='delete_task', description='Deletes a task by its unique identifier.\\n\\nArgs:\\n    task_id (str): The unique identifier of the task to be deleted.\\n\\nReturns:\\n    bool: True if the task was successfully deleted, False otherwise.', args_schema=<class 'langchain_core.utils.pydantic.delete_task'>, func=<function delete_task at 0x000001BE1B0E3A60>)]"
+       "[StructuredTool(name='get_tasks', description='Retrieves a list of tasks, optionally filtered by provided criteria.\\n\\nArgs:\\n    filters (Optional[Dict]): A dictionary of filter criteria where keys are task attributes.\\n\\nReturns:\\n    List[Dict]: A list of tasks matching the filters, or all tasks if no filters are provided.', args_schema=<class 'langchain_core.utils.pydantic.get_tasks'>, func=<function get_tasks at 0x000001E37ED2AC00>),\n",
+       " StructuredTool(name='add_task', description='Adds a new task to the task list.\\n\\nArgs:\\n    title (str): The title of the task.\\n    description (str): A detailed description of the task.\\n    task_type (str): The type/category of the task.\\n    start_date (str): The start date of the task.\\n    end_date (str): The end date of the task.\\n    status (str): The current status of the task (e.g., pending, completed).\\n\\nReturns:\\n    Dict: The newly created task object with a unique ID.', args_schema=<class 'langchain_core.utils.pydantic.add_task'>, func=<function add_task at 0x000001E37ED2ACA0>),\n",
+       " StructuredTool(name='update_task', description='Updates an existing task by its unique identifier.\\n\\nArgs:\\n    task_id (str): The unique identifier of the task to be updated.\\n    updates (Dict): A dictionary containing fields to update and their new values.\\n\\nReturns:\\n    Optional[Dict]: The updated task object if found, otherwise None.', args_schema=<class 'langchain_core.utils.pydantic.update_task'>, func=<function update_task at 0x000001E37ED2B560>),\n",
+       " StructuredTool(name='delete_task', description='Deletes a task by its unique identifier.\\n\\nArgs:\\n    task_id (str): The unique identifier of the task to be deleted.\\n\\nReturns:\\n    bool: True if the task was successfully deleted, False otherwise.', args_schema=<class 'langchain_core.utils.pydantic.delete_task'>, func=<function delete_task at 0x000001E37ED2AA20>)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +78,7 @@
        "[]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,16 +89,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<flask_cors.extension.CORS at 0x1be04878610>"
+       "<flask_cors.extension.CORS at 0x1e37f6523d0>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -169,21 +176,21 @@
       "Invoking: `add_task` with `{'title': 'Buy new shoes for son', 'description': 'Purchase a new pair of shoes for my son.', 'task_type': 'Shopping', 'start_date': '2023-10-10', 'end_date': '2023-10-15', 'status': 'pending'}`\n",
       "\n",
       "\n",
-      "\u001b[0m\u001b[33;1m\u001b[1;3m{'id': '10dc43c1-f95d-4c58-b962-36da4c97e204', 'title': 'Buy new shoes for son', 'description': 'Purchase a new pair of shoes for my son.', 'task_type': 'Shopping', 'start_date': '2023-10-10', 'end_date': '2023-10-15', 'status': 'pending'}\u001b[0m"
+      "\u001b[0m\u001b[33;1m\u001b[1;3m{'id': '36836a48-e370-4bf1-94d1-c022b0144ed5', 'title': 'Buy new shoes for son', 'description': 'Purchase a new pair of shoes for my son.', 'task_type': 'Shopping', 'start_date': '2023-10-10', 'end_date': '2023-10-15', 'status': 'pending'}\u001b[0m"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [11/Mar/2025 16:05:58] \"POST /agent HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [11/Mar/2025 16:10:28] \"POST /agent HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32;1m\u001b[1;3mI have added the task to buy new shoes for your son to the task list. Here are the details:\n",
+      "\u001b[32;1m\u001b[1;3mThe task to buy new shoes for your son has been added to the task list. Here are the details:\n",
       "\n",
       "- **Title:** Buy new shoes for son\n",
       "- **Description:** Purchase a new pair of shoes for my son.\n",
@@ -197,31 +204,69 @@
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
       "\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `get_tasks` with `{}`\n",
+      "Invoking: `add_task` with `{'title': 'Bake a Cake', 'description': 'Prepare and bake a cake for the upcoming event.', 'task_type': 'Baking', 'start_date': '2023-10-01', 'end_date': '2023-10-01', 'status': 'pending'}`\n",
       "\n",
       "\n",
-      "\u001b[0m\u001b[36;1m\u001b[1;3m[{'id': '10dc43c1-f95d-4c58-b962-36da4c97e204', 'title': 'Buy new shoes for son', 'description': 'Purchase a new pair of shoes for my son.', 'task_type': 'Shopping', 'start_date': '2023-10-10', 'end_date': '2023-10-15', 'status': 'pending'}]\u001b[0m"
+      "\u001b[0m\u001b[33;1m\u001b[1;3m{'id': '61ffc9dc-7e1c-4e86-919c-4467ce899ee2', 'title': 'Bake a Cake', 'description': 'Prepare and bake a cake for the upcoming event.', 'task_type': 'Baking', 'start_date': '2023-10-01', 'end_date': '2023-10-01', 'status': 'pending'}\u001b[0m"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [11/Mar/2025 16:06:03] \"POST /agent HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [11/Mar/2025 16:10:34] \"POST /agent HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32;1m\u001b[1;3mYou have the following task:\n",
+      "\u001b[32;1m\u001b[1;3mThe task to bake a cake has been successfully added to the task list. Here are the details:\n",
       "\n",
-      "- **Title:** Buy new shoes for son\n",
-      "- **Description:** Purchase a new pair of shoes for my son.\n",
-      "- **Task Type:** Shopping\n",
-      "- **Start Date:** October 10, 2023\n",
-      "- **End Date:** October 15, 2023\n",
+      "- **Title:** Bake a Cake\n",
+      "- **Description:** Prepare and bake a cake for the upcoming event.\n",
+      "- **Task Type:** Baking\n",
+      "- **Start Date:** October 1, 2023\n",
+      "- **End Date:** October 1, 2023\n",
       "- **Status:** Pending\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `get_tasks` with `{}`\n",
+      "\n",
+      "\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m[{'id': '36836a48-e370-4bf1-94d1-c022b0144ed5', 'title': 'Buy new shoes for son', 'description': 'Purchase a new pair of shoes for my son.', 'task_type': 'Shopping', 'start_date': '2023-10-10', 'end_date': '2023-10-15', 'status': 'pending'}, {'id': '61ffc9dc-7e1c-4e86-919c-4467ce899ee2', 'title': 'Bake a Cake', 'description': 'Prepare and bake a cake for the upcoming event.', 'task_type': 'Baking', 'start_date': '2023-10-01', 'end_date': '2023-10-01', 'status': 'pending'}]\u001b[0m"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [11/Mar/2025 16:10:41] \"POST /agent HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32;1m\u001b[1;3mHere are the tasks you have:\n",
+      "\n",
+      "1. **Task Title:** Buy new shoes for son\n",
+      "   - **Description:** Purchase a new pair of shoes for my son.\n",
+      "   - **Task Type:** Shopping\n",
+      "   - **Start Date:** 2023-10-10\n",
+      "   - **End Date:** 2023-10-15\n",
+      "   - **Status:** Pending\n",
+      "\n",
+      "2. **Task Title:** Bake a Cake\n",
+      "   - **Description:** Prepare and bake a cake for the upcoming event.\n",
+      "   - **Task Type:** Baking\n",
+      "   - **Start Date:** 2023-10-01\n",
+      "   - **End Date:** 2023-10-01\n",
+      "   - **Status:** Pending\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
