--- a/agent-python/client.ipynb
+++ b/agent-python/client.ipynb
@@ -29,7 +29,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I have added the task to buy new shoes for your son to the task list. Here are the details:\n",
+      "The task to buy new shoes for your son has been added to the task list. Here are the details:\n",
       "\n",
       "- **Title:** Buy new shoes for son\n",
       "- **Description:** Purchase a new pair of shoes for my son.\n",
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "url = 'http://localhost:5000/agent'\n",
-    "payload = {'prompt': 'what are the tasks i have?'}\n",
+    "payload = {'prompt': 'i need to bake a cake, add it to the tasks list'}\n",
     "response = requests.post(url, json=payload)"
    ]
   },
@@ -68,14 +68,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You have the following task:\n",
+      "The task to bake a cake has been successfully added to the task list. Here are the details:\n",
       "\n",
-      "- **Title:** Buy new shoes for son\n",
-      "- **Description:** Purchase a new pair of shoes for my son.\n",
-      "- **Task Type:** Shopping\n",
-      "- **Start Date:** October 10, 2023\n",
-      "- **End Date:** October 15, 2023\n",
+      "- **Title:** Bake a Cake\n",
+      "- **Description:** Prepare and bake a cake for the upcoming event.\n",
+      "- **Task Type:** Baking\n",
+      "- **Start Date:** October 1, 2023\n",
+      "- **End Date:** October 1, 2023\n",
       "- **Status:** Pending\n"
+     ]
+    }
+   ],
+   "source": [
+    "if response.status_code == 200:\n",
+    "    answer = response.json().get('response', 'No response found')\n",
+    "    print(answer)\n",
+    "else:\n",
+    "    print(f\"Error: {response.status_code}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'http://localhost:5000/agent'\n",
+    "payload = {'prompt': 'what are the tasks i have?'}\n",
+    "response = requests.post(url, json=payload)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here are the tasks you have:\n",
+      "\n",
+      "1. **Task Title:** Buy new shoes for son\n",
+      "   - **Description:** Purchase a new pair of shoes for my son.\n",
+      "   - **Task Type:** Shopping\n",
+      "   - **Start Date:** 2023-10-10\n",
+      "   - **End Date:** 2023-10-15\n",
+      "   - **Status:** Pending\n",
+      "\n",
+      "2. **Task Title:** Bake a Cake\n",
+      "   - **Description:** Prepare and bake a cake for the upcoming event.\n",
+      "   - **Task Type:** Baking\n",
+      "   - **Start Date:** 2023-10-01\n",
+      "   - **End Date:** 2023-10-01\n",
+      "   - **Status:** Pending\n"
      ]
     }
    ],
